--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>JavaScriptSkillcheck</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <script th:src="@{/js/post.js}"></script>
+  <script th:src="@{/js/count.js}"></script>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
   
   <div class="form-area">
     <div class="form">
-      <form th:action="@{/articles}" th:object="${articleForm}" method="post" id="new_article">
+      <form th:object="${articleForm}" id="new_article">
         <input type="text" th:field="*{text}" class="article_form" id="article_text"/>
         <div id="char_num">
           0文字
